Bug 187759 opening menu with full-page (quicktime, flash) plugin crashes in [@ nsMenuBarFrame::SetActive ] r=aaronl sr=bz